# Notes-OpenGL

Animation/: CMakeLists.txt
Animation/headers/: EBO.hpp  Shader.hpp  VAO.hpp  VBO.hpp
Animation/shaders/: default.frag  default.vert
Animation/src/: EBO.cpp  Shader.cpp  VAO.cpp  VBO.cpp  main.cpp
Color_Splash/shaders/: default.frag  default.vert
Color_Splash/src/: VAO.cpp  main.cpp
CookieRun/headers/: VAO.hpp  VBO.hpp
CookieRun/shaders/: default.vert
CookieRun/src/: EBO.cpp  Texture.cpp  main.cpp
Excersise/src/: main.cpp
Exercise/: CMakeLists.txt
Exercise/headers/: VAO.hpp  VBO.hpp  shader.hpp
Exercise/shaders/: default.frag  default.vert
Exercise/src/: VAO.cpp  VBO.cpp  shader.cpp
OpenGL-Project-Template/: CMakeLists.txt
OpenGL-Project-Template/headers/: VBO.hpp
OpenGL-Project-Template/src/: main.cpp
OpenGL_Project_Template/: CMakeLists.txt
OpenGL_Project_Template/headers/: EBO.hpp  VAO.hpp  shaderClass.hpp
OpenGL_Project_Template/src/: VAO.cpp  VBO.cpp  main.cpp  shaderClass.cpp
Project-Template/: CMakeLists.txt
Project-Template/headers/: VAO.h
Project-Template/shaders/: default.frag
Project-Template/src/: VAO.cpp  VBO.cpp  main.cpp  shaderClass.cpp
Rectangle/: CMakeLists.txt
Rectangle/headers/: VAO.hpp
Rectangle/shaders/: default.frag
Rectangle/src/: VAO.cpp  main.cpp  shaderClass.cpp
Shaders/headers/: VAO.hpp
Shaders/src/: VAO.cpp  VBO.cpp  main.cpp
Textures/: CMakeLists.txt
Textures/headers/: EBO.hpp  Texture.hpp  shaderClass.hpp
Textures/shaders/: default.vert
Textures/src/: VAO.cpp  main.cpp
(+2 files in other folders)
